<resources>
    <string name="app_name">Proyecto Final</string>
    <string name="ver_notas">Ver Notas</string>
    <string name="ver_tareas">Ver Tareas</string>
    <string name="agregar_notas">Agregar notas</string>
    <string name="agregar_tareas">Agregar tareas</string>
    <string name="agregar" translatable="false">Agregar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="descripcion">Descripción</string>
    <string name="titulo">Título</string>
    <string name="ver_nota">Ver nota</string>
    <string name="ver">ver</string>
    <string name="editar">Editar</string>
    <string name="actualizar">Actualizar</string>
    <string name="tituloAlert">Elija una opción</string>
    <string name="audio">Audio</string>
    <string name="video">Vídeo</string>
    <string name="adjuntar">Adjuntar</string>
    <string name="tomar">Tomar</string>
    <string name="guardar">Guardar</string>
    <string name="grabar">Grabar</string>
    <string name="grabando">Grabando</string>
    <string name="borrar">Borrar</string>
    <string name="imagen">Imagen</string>
    <string name="buscar">Buscar</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="Masrecordatorios">Mas Recordatorios</string>

</resources>
